TODO: read property sequence is broken with respect to utf-8 etc.
TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: just for fun, do shade and tint with XRender.
WISH: support tex fonts

TODO: document transient_for, vt and the grab etc. functionality
TODO: add warning about perl interpreter and setuid/setgid

	- perl: implement additional hook: line_update, add_lines.
        - perl: urxvt::line now can set via ->t and ->r.
        - perl: changed interpretation of --perl-ext-common and -pe.
        - perl: finally implemented --perl-eval.
        - perl: much increased functionality, better overlays, popup support
          and much much more.
        - perl: anyevent support.
        - free the resource database: this plugs a massive memory hole. as a
          side effect, it also gets rid of XGetDefault calls.
        - free one of the cursors, fixes a small memory leaks.

6.3  Wed Jan  4 22:37:10 CET 2006
        - SECURITY FIX: on systems using openpty, permissions were
          not correctly updated on the tty device and were left as
          world-readable and world-writable (likely in original rxvt,
          too), and were not restored properly. Affected are only
          systems where non-unix ptys were used (such as most BSDs, not
          GNU/Linux). (found, patched and debugged by Ryan Beasley).
        - meta8 support was forcefully enabled in most configurations.
          restored configurability of this (useless) feature (reported
          by Mikachu).
        - optionally embed a perl interpreter, which can be used for more
          intelligent/customized selection support, visual feedback,
          menus, tabs etc. See the the urxvtperl manpage, the -pe option,
          perl*-resources and keysym resources. Not everything is there yet.
        - try to be more clever about differing font sizes and their ascent.